Restored old click-to-search behavior to Locations panel + various fixes/tweaks: - Fix for clicking QuickSearch items not working - Show "No matches found" in advanced search tag picker instead of nothing - Outliner right-icon isn't pushed out of view for long item labels: text is truncated instead

--- a/resources/style/remake/outliner.scss
+++ b/resources/style/remake/outliner.scss
@@ -128,7 +128,8 @@
     opacity: 0.25;
   }
 
-  .custom-icon {
+  // For the folder/tag icon on the left of the label
+  > .custom-icon {
     margin-right: 0.375rem;
     pointer-events: none;
   }
@@ -146,12 +147,17 @@
     }
   }
 
-  > div {
+  > .label-text {
     text-overflow: ellipsis;
     white-space: nowrap;
+    overflow: hidden;
     width: 100%;
     line-height: 1.5;
     padding-bottom: 2px;
+  }
+
+  > .indicator {
+    padding: 0.5rem;
   }
 
   input {
